--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16837,7 +16837,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 48, 56, 278, 182
 }
 
-RECIBOS_6 DIALOG DISCARDABLE 82, 27, 333, 272
+RECIBOS_BANCOS DIALOG DISCARDABLE 82, 27, 333, 272
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
