--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1549,33 +1549,34 @@ ART_WEB DIALOG DISCARDABLE 36, 16, 496, 286
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Publicar este artículo en la página web", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 39, 141, 10
-  CONTROL "Producto destacado", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 64, 51, 77, 10
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 417, 37, 70, 12
-  CONTROL "Sobre precio", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 79, 54, 10
-  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 106, 76, 76, 71
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 106, 92, 56, 12
-  CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 215, 92, 40, 12
-  CONTROL "", 122, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 285, 92, 57, 12
-  CONTROL "", 123, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 417, 92, 69, 12
-  CONTROL "", 220, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 120, 440, 102
-  CONTROL "", 180, "Edit", ES_MULTILINE|WS_BORDER, 106, 241, 383, 12
-  CONTROL "", 190, "Edit", ES_MULTILINE|WS_BORDER, 106, 255, 383, 12
-  CONTROL "Caracteristicas técnicas", -1, "Button", BS_GROUPBOX, 44, 109, 448, 118
-  CONTROL "Precios y ofertas para la web", -1, "Button", BS_GROUPBOX, 44, 65, 447, 43
-  CONTROL "Código web", -1, "Static", WS_GROUP, 351, 41, 40, 8
+  CONTROL "Publicar este artículo en la página web", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 40, 141, 10
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 49, 53, 215, 65
+  CONTROL "Sobre precio", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 282, 41, 54, 10
+  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 418, 41, 70, 70
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 418, 56, 70, 12
+  CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 418, 70, 70, 12
+  CONTROL "", 122, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 418, 84, 70, 12
+  CONTROL "", 123, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 418, 98, 70, 12
+  CONTROL "", 220, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 48, 135, 440, 87
+  CONTROL "Producto destacado", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 244, 77, 10
+  CONTROL "", 180, "Edit", ES_MULTILINE|WS_BORDER, 198, 241, 290, 12
+  CONTROL "", 190, "Edit", ES_MULTILINE|WS_BORDER, 198, 255, 290, 12
+  CONTROL "", 200, "Edit", ES_MULTILINE|WS_BORDER, 198, 269, 290, 12
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 417, 2, 70, 12
+  CONTROL "Caracteristicas técnicas", -1, "Button", BS_GROUPBOX, 44, 123, 448, 104
+  CONTROL "Precios y ofertas para la web", -1, "Button", BS_GROUPBOX, 272, 31, 219, 90
+  CONTROL "Código web", -1, "Static", WS_GROUP, 351, 6, 40, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 3, 4, 34, 30
-  CONTROL "Configuración para el artículo en la web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Precios de tarifas", -1, "Static", WS_GROUP, 48, 95, 56, 8
-  CONTROL "% Descuento", -1, "Static", WS_GROUP, 166, 95, 47, 8
-  CONTROL "Neto", -1, "Static", WS_GROUP, 262, 95, 21, 8
-  CONTROL "Impuestos incluidos", -1, "Static", WS_GROUP, 351, 95, 64, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 447, 34
-  CONTROL "Motores de búsqueda SEO", -1, "Button", BS_GROUPBOX, 44, 229, 447, 55
-  CONTROL "Meta-título", -1, "Static", WS_GROUP, 48, 244, 56, 8
-  CONTROL "Meta-descripción", -1, "Static", WS_GROUP, 48, 258, 56, 8
-  CONTROL "", 200, "Edit", ES_MULTILINE|WS_BORDER, 106, 269, 383, 12
-  CONTROL "Meta-keywords", -1, "Static", WS_GROUP, 48, 272, 56, 8
+  CONTROL "Configuración para el artículo en la web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 131, 8
+  CONTROL "Precios de tarifas", -1, "Static", WS_GROUP, 282, 59, 56, 8
+  CONTROL "% Descuento", -1, "Static", WS_GROUP, 282, 73, 47, 8
+  CONTROL "Neto", -1, "Static", WS_GROUP, 282, 87, 21, 8
+  CONTROL "Impuestos incluidos", -1, "Static", WS_GROUP, 282, 101, 64, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 224, 92
+  CONTROL "Otras propiedades", -1, "Button", BS_GROUPBOX, 44, 229, 447, 55
+  CONTROL "Meta-título", -1, "Static", WS_GROUP, 137, 244, 56, 8
+  CONTROL "Meta-descripción", -1, "Static", WS_GROUP, 137, 258, 56, 8
+  CONTROL "Meta-keywords", -1, "Static", WS_GROUP, 137, 272, 56, 8
 }
 
 ARTCODE DIALOG DISCARDABLE 175, 153, 371, 104
