--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4771,7 +4771,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-CTAREM DIALOG DISCARDABLE 65, 36, 325, 335
+CTAREM DIALOG DISCARDABLE 65, 36, 325, 346
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Cuentas de remesas"
 FONT 8, "MS Sans Serif"
@@ -4795,45 +4795,47 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 278, 140, 34, 11
   CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 102, 152, 210, 11
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 102, 164, 70, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 102, 177, 34, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 138, 177, 34, 11
-  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 204, 46, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 278, 204, 34, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 102, 216, 210, 11
-  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 102, 228, 70, 11
-  CONTROL "", 440, "Edit", WS_BORDER|WS_TABSTOP, 102, 240, 210, 11
-  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 102, 252, 70, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 173, 252, 139, 11
-  CONTROL "", 470, "Edit", WS_BORDER|WS_TABSTOP, 102, 264, 210, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 102, 293, 70, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 212, 315, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 268, 315, 50, 14
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 102, 176, 34, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 138, 176, 34, 11
+  CONTROL "", 280, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 189, 70, 11
+  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 102, 216, 46, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 278, 216, 34, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 102, 228, 210, 11
+  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 102, 240, 70, 11
+  CONTROL "", 440, "Edit", WS_BORDER|WS_TABSTOP, 102, 252, 210, 11
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 102, 264, 70, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 173, 264, 139, 11
+  CONTROL "", 470, "Edit", WS_BORDER|WS_TABSTOP, 102, 276, 210, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 102, 305, 70, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 212, 327, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 268, 327, 50, 14
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 316, 38
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 17, 60, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 28, 60, 8
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 2, 43, 316, 86
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 57, 60, 8
   CONTROL "IBAN de abono", -1, "Static", WS_GROUP, 8, 80, 60, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 8, 180, 26, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 8, 179, 26, 8
   CONTROL "Sufijo", -1, "Static", WS_GROUP, 8, 93, 60, 8
-  CONTROL "Presentación", -1, "Button", BS_GROUPBOX, 2, 131, 316, 61
+  CONTROL "Presentación", -1, "Button", BS_GROUPBOX, 2, 131, 316, 73
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 144, 27, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 156, 30, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 8, 168, 23, 8
   CONTROL "Cuenta banco", -1, "Static", WS_GROUP, 8, 105, 60, 8
   CONTROL "Cuenta descuento", -1, "Static", WS_GROUP, 8, 117, 60, 8
-  CONTROL "Código INE (necesario para norma 58 del C.S.B.)", -1, "Button", BS_GROUPBOX, 2, 282, 316, 26
-  CONTROL "Código INE", -1, "Static", WS_GROUP, 8, 297, 60, 8
+  CONTROL "Código INE (necesario para norma 58 del C.S.B.)", -1, "Button", BS_GROUPBOX, 2, 294, 316, 26
+  CONTROL "Código INE", -1, "Static", WS_GROUP, 8, 309, 60, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 8, 68, 60, 8
-  CONTROL "Acreedor", -1, "Button", BS_GROUPBOX, 2, 195, 316, 83
-  CONTROL "Código", -1, "Static", WS_GROUP, 8, 208, 27, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 220, 30, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 8, 232, 23, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 244, 30, 8
-  CONTROL "Código postal y población", -1, "Static", WS_GROUP, 8, 255, 92, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 8, 267, 35, 8
+  CONTROL "Acreedor", -1, "Button", BS_GROUPBOX, 2, 207, 316, 83
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 220, 27, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 232, 30, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 8, 244, 23, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 8, 256, 30, 8
+  CONTROL "Código postal y población", -1, "Static", WS_GROUP, 8, 267, 92, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 8, 279, 35, 8
   CONTROL "Código páis ISO", -1, "Static", WS_GROUP, 212, 143, 56, 8
-  CONTROL "Código país ISO", -1, "Static", WS_GROUP, 212, 207, 57, 8
+  CONTROL "Código país ISO", -1, "Static", WS_GROUP, 212, 219, 57, 8
+  CONTROL "Fecha firma", -1, "Static", WS_GROUP, 8, 192, 42, 8
 }
 
 DATERICH DIALOG DISCARDABLE 34, 96, 208, 118
