campo ivan includo web

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1550,29 +1550,29 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Publicar este artículo en la página web", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 40, 141, 10
-  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 49, 53, 215, 65
-  CONTROL "Sobre precio", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 282, 41, 54, 10
-  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 418, 41, 70, 70
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 418, 56, 70, 12
-  CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 418, 70, 70, 12
-  CONTROL "", 122, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 418, 84, 70, 12
-  CONTROL "", 123, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 418, 98, 70, 12
-  CONTROL "", 220, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 48, 135, 440, 87
+  CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 49, 53, 215, 57
+  CONTROL "Sobre precio", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 42, 54, 10
+  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 408, 41, 80, 70
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 408, 56, 80, 12
+  CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 408, 70, 80, 12
+  CONTROL "", 122, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 408, 84, 80, 12
+  CONTROL "Impuestos incluidos", 124, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 279, 100, 75, 10
+  CONTROL "", 123, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 408, 98, 80, 12
+  CONTROL "", 220, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 48, 129, 440, 93
   CONTROL "Producto destacado", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 244, 77, 10
   CONTROL "", 180, "Edit", ES_MULTILINE|WS_BORDER, 198, 241, 290, 12
   CONTROL "", 190, "Edit", ES_MULTILINE|WS_BORDER, 198, 255, 290, 12
   CONTROL "", 200, "Edit", ES_MULTILINE|WS_BORDER, 198, 269, 290, 12
   CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 417, 2, 70, 12
-  CONTROL "Caracteristicas técnicas", -1, "Button", BS_GROUPBOX, 44, 123, 448, 104
-  CONTROL "Precios y ofertas para la web", -1, "Button", BS_GROUPBOX, 272, 31, 219, 90
+  CONTROL "Caracteristicas técnicas", -1, "Button", BS_GROUPBOX, 44, 118, 448, 109
+  CONTROL "Precios y ofertas para la web", -1, "Button", BS_GROUPBOX, 272, 31, 219, 83
   CONTROL "Código web", -1, "Static", WS_GROUP, 351, 6, 40, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 3, 4, 34, 30
   CONTROL "Configuración para el artículo en la web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 131, 8
-  CONTROL "Precios de tarifas", -1, "Static", WS_GROUP, 282, 59, 56, 8
-  CONTROL "% Descuento", -1, "Static", WS_GROUP, 282, 73, 47, 8
-  CONTROL "Neto", -1, "Static", WS_GROUP, 282, 87, 21, 8
-  CONTROL "Impuestos incluidos", -1, "Static", WS_GROUP, 282, 101, 64, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 224, 92
+  CONTROL "Precios de tarifas", -1, "Static", WS_GROUP, 279, 59, 56, 8
+  CONTROL "% Descuento", -1, "Static", WS_GROUP, 279, 73, 47, 8
+  CONTROL "Neto", -1, "Static", WS_GROUP, 279, 87, 21, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 224, 85
   CONTROL "Otras propiedades", -1, "Button", BS_GROUPBOX, 44, 229, 447, 55
   CONTROL "Meta-título", -1, "Static", WS_GROUP, 137, 244, 56, 8
   CONTROL "Meta-descripción", -1, "Static", WS_GROUP, 137, 258, 56, 8
