--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -135,3 +135,5 @@ document_plain_user1_64 BITMAP "..\\bmp\\document_plain_user1_64.bmp"
 find_64 BITMAP "..\\bmp\\find_64.bmp"
 edit_56 BITMAP "..\\bmp\\edit_56.bmp"
 view_56 BITMAP "..\\bmp\\view_56.bmp"
+all_components_16 BITMAP "..\\bmp\\all_components_16.bmp"
+component_blue_16 BITMAP "..\\bmp\\component_blue_16.bmp"
