busquedas en xbrowse de propiedades

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15890,12 +15890,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Añadir", IDOK, "Button", WS_TABSTOP, 508, 307, 50, 14
   CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 563, 307, 50, 14
   CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 278, 3, 336, 302
-  CONTROL "", 100, "TXBrowse", 0x00200000, 4, 3, 135, 302
+  CONTROL "", 100, "TXBrowse", 0x00200000, 4, 18, 135, 287
   CONTROL "Todas", 111, "Button", WS_TABSTOP, 4, 307, 50, 14
   CONTROL "Ninguna", 112, "Button", WS_TABSTOP, 89, 307, 50, 14
-  CONTROL "", 110, "TXBrowse", 0x00200000, 141, 3, 135, 302
+  CONTROL "", 110, "TXBrowse", 0x00200000, 141, 18, 135, 287
   CONTROL "Todas", 113, "Button", WS_TABSTOP, 141, 307, 50, 14
   CONTROL "Ninguna", 114, "Button", WS_TABSTOP, 226, 307, 50, 14
+  CONTROL "", 115, "Static", WS_GROUP, 5, 7, 135, 8
+  CONTROL "", 116, "Static", WS_GROUP, 141, 7, 135, 8
 }
 
 PREDIVPNT DIALOG DISCARDABLE 140, 65, 370, 242
