--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1577,7 +1577,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Meta-título", -1, "Static", WS_GROUP, 137, 244, 56, 8
   CONTROL "Meta-descripción", -1, "Static", WS_GROUP, 137, 258, 56, 8
   CONTROL "Meta-keywords", -1, "Static", WS_GROUP, 137, 272, 56, 8
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 157, 41, 107, 71
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 157, 41, 107, 71
 }
 
 ARTCODE DIALOG DISCARDABLE 175, 153, 371, 104
@@ -4301,12 +4301,6 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
 CAPTION "Asistente para sincronizar la información de su web."
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 140, "Static", WS_BORDER|WS_GROUP, 136, 38, 328, 10
-  CONTROL "", 150, "Static", WS_BORDER|WS_GROUP, 136, 50, 328, 10
-  CONTROL "", 160, "Static", WS_BORDER|WS_GROUP, 136, 62, 328, 10
-  CONTROL "", 170, "Static", WS_BORDER|WS_GROUP, 136, 74, 328, 10
-  CONTROL "", 180, "Static", WS_BORDER|WS_GROUP, 136, 86, 328, 10
-  CONTROL "", 190, "Static", WS_BORDER|WS_GROUP, 136, 98, 328, 10
   CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 54, 127, 410, 189
   CONTROL "Importar pedidos", 520, "Button", WS_TABSTOP, 44, 354, 59, 14
   CONTROL "Actualiza stock", 530, "Button", WS_TABSTOP, 280, 354, 59, 14
@@ -4317,14 +4311,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 230, "msctls_progress32", 0x00000000, 54, 338, 410, 6
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Comercio electrónico. Este asistente le guiará para enviar y recibir información de su web.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 425, 8
-  CONTROL "Datos de conexión", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 28, 426, 85
-  CONTROL "Servidor:", -1, "Static", WS_GROUP, 54, 40, 80, 8
-  CONTROL "Puerto:", -1, "Static", WS_GROUP, 54, 52, 80, 8
-  CONTROL "Nombre de usuario:", -1, "Static", WS_GROUP, 54, 64, 80, 8
-  CONTROL "Base de datos:", -1, "Static", WS_GROUP, 54, 76, 80, 8
-  CONTROL "Usuario FTP ", -1, "Static", WS_GROUP, 54, 88, 80, 8
-  CONTROL "Direcctorio imágenes", -1, "Static", WS_GROUP, 54, 100, 80, 8
+  CONTROL "Web a exportar", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 28, 426, 85
+  CONTROL "Web", -1, "Static", WS_GROUP, 54, 41, 21, 8
   CONTROL "Procesos en curso", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 116, 426, 234
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 136, 36, 328, 89
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -5417,68 +5407,35 @@ EMPRESA_COMUNICACIONES DIALOG DISCARDABLE 92, 14, 432, 361
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 41, 207, 12
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 41, 206, 12
   CONTROL "", 165, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 41, 44, 12
-  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 54, 207, 12
+  CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 54, 206, 12
   CONTROL "", 176, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 67, 96, 12
   CONTROL "Autenticación SMTP", 175, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 56, 79, 10
   CONTROL "Requiere SSL", 177, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 68, 79, 10
   CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 80, 297, 12
   CONTROL "", 185, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 94, 297, 12
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 125, 207, 12
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 125, 44, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 138, 297, 12
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 151, 297, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 164, 297, 12
-  CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 177, 297, 12
-  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 190, 99, 12
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 379, 205, 45, 15
-  CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 129, 10
-  CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 220, 125, 10
-  CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 207, 105, 10
-  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 304, 190, 30, 12
-  CONTROL "", 320, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 304, 204, 30, 12
-  CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 190, 12, 12
-  CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 12
-  CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 259, 44, 12
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 259, 207, 12
-  CONTROL "Envío pasivo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 275, 72, 10
-  CONTROL "", 240, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 273, 207, 12
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 287, 297, 12
-  CONTROL "", 300, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 315, 297, 12
-  CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 328, 96, 12
-  CONTROL "Servidor base de datos de comercio electrónico", -1, "Button", BS_GROUPBOX, 44, 113, 385, 120
-  CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 128, 31, 8
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 140, 29, 8
-  CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 153, 41, 8
-  CONTROL "Base de datos", -1, "Static", WS_GROUP, 48, 167, 51, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 128, 26, 8
-  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 337, 194, 57, 8
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 128, 124, 206, 107
+  CONTROL "", 101, "TBtnBmp", 0x00000000, 128, 138, 12, 12
+  CONTROL "", 102, "TBtnBmp", 0x00000000, 128, 151, 12, 12
+  CONTROL "", 300, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 182, 297, 12
+  CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 195, 96, 12
+  CONTROL "Webs disponibles para comercion electrónico", -1, "Button", BS_GROUPBOX, 44, 113, 385, 55
+  CONTROL "Probar conexión BD", -1, "Static", WS_GROUP, 49, 142, 73, 8
   CONTROL "Servidor de correo electrónico", -1, "Button", BS_GROUPBOX, 44, 29, 385, 81
   CONTROL "Servidor", -1, "Static", WS_GROUP, 49, 43, 31, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 49, 57, 28, 8
   CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 43, 26, 8
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 49, 70, 41, 8
-  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 234, 194, 45, 8
-  CONTROL "Latencia", -1, "Static", WS_GROUP, 338, 208, 33, 8
-  CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 43, 303, 384, 40
-  CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 318, 74, 8
-  CONTROL "Código EDI [EAN]", -1, "Static", WS_GROUP, 48, 331, 62, 8
-  CONTROL "Servidor para imagenes de comercio eletrónico", -1, "Button", BS_GROUPBOX, 43, 234, 385, 68
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 262, 51, 8
-  CONTROL "Contraseña FTP", -1, "Static", WS_GROUP, 48, 275, 51, 8
-  CONTROL "Directorio imágenes", -1, "Static", WS_GROUP, 48, 290, 70, 8
-  CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 248, 31, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 263, 26, 8
+  CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 45, 170, 384, 40
+  CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 185, 74, 8
+  CONTROL "Código EDI [EAN]", -1, "Static", WS_GROUP, 48, 198, 62, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
   CONTROL "Configuraciones para el envio de email y para el enlace de la aplicación con una página web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 384, 8
-  CONTROL "Cookie key", -1, "Static", WS_GROUP, 48, 181, 51, 8
   CONTROL "Enviar con copia a", -1, "Static", WS_GROUP, 49, 83, 65, 8
-  CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 196, 72, 8
   CONTROL "Enviar copia oculta", -1, "Static", WS_GROUP, 49, 97, 66, 8
-  CONTROL "Serie presupuesto", -1, "Static", WS_GROUP, 234, 208, 63, 8
-  CONTROL "", 255, "TBtnBmp", 0x00000000, 412, 245, 12, 12
-  CONTROL "Probar conexión", 4002, "Static", WS_GROUP, 337, 249, 57, 8
+  CONTROL "Probar conexión FTP", -1, "Static", WS_GROUP, 49, 155, 57, 8
+  CONTROL "Web", -1, "Static", WS_GROUP, 49, 127, 66, 8
 }
 
 EMPRESA_1 DIALOG DISCARDABLE 31, 12, 397, 287
