Compensación de recibos.

--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -137,3 +137,4 @@ edit_56 BITMAP "..\\bmp\\edit_56.bmp"
 view_56 BITMAP "..\\bmp\\view_56.bmp"
 all_components_16 BITMAP "..\\bmp\\all_components_16.bmp"
 component_blue_16 BITMAP "..\\bmp\\component_blue_16.bmp"
+folder_components_48 BITMAP "..\\bmp\\folder_components_48.bmp"
