--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16725,7 +16725,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "No incluir en arqueo", 200, "Button", BS_AUTOCHECKBOX, 234, 39, 77, 10
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 162, 285, 92
   CONTROL "Código caja", -1, "Static", WS_GROUP, 50, 148, 43, 8
-  CONTROL "", 240, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 77, 70, 11
 }
 
 RECIBOS_2 DIALOG DISCARDABLE 82, 27, 333, 235
@@ -20914,19 +20913,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 180, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 6, 131, 206, 174
 }
 
-RECIBOSEXTEND DIALOG DISCARDABLE 278, 96, 635, 307
+RECIBOSCOMPENSAR DIALOG DISCARDABLE 278, 96, 493, 356
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
 CAPTION "Recibos de clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 500, "SysTabControl32", 0x00000000, 6, 1, 336, 271
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 236, 275, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 291, 275, 50, 14
-  CONTROL "Recibos agrupados", -1, "Button", BS_GROUPBOX, 345, 1, 287, 271
-  CONTROL "Aña&dir [F2]", 100, "Button", WS_TABSTOP, 349, 13, 50, 14
-  CONTROL "&Eliminar [F4]", 110, "Button", WS_TABSTOP, 404, 13, 50, 14
-  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 349, 29, 279, 220
-  CONTROL "Total", 488, "Static", WS_GROUP, 349, 252, 72, 16
-  CONTROL "0", 485, "Static", SS_RIGHT|WS_GROUP, 486, 252, 133, 16
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 377, 338, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 430, 338, 50, 14
+  CONTROL "Recibos agrupados", -1, "Button", BS_GROUPBOX, 44, 62, 441, 271
+  CONTROL "Aña&dir [F2]", 100, "Button", WS_TABSTOP, 52, 74, 50, 14
+  CONTROL "&Eliminar [F4]", 110, "Button", WS_TABSTOP, 103, 74, 50, 14
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 52, 90, 428, 220
+  CONTROL "Total", 488, "Static", WS_GROUP, 286, 313, 87, 16
+  CONTROL "0", 485, "Static", SS_RIGHT|WS_GROUP, 375, 313, 105, 16
+  CONTROL "General", 4001, "Button", BS_GROUPBOX, 44, 29, 441, 31
+  CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 84, 43, 74, 11
+  CONTROL "", 311, "Edit", WS_BORDER|WS_TABSTOP, 160, 43, 320, 11
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 52, 46, 27, 8
+  CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "Compensación de recibos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 336, 8
 }
 
