varios de la jaca, garrido y nazareno

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1173,7 +1173,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 800, "Edit", WS_BORDER|WS_TABSTOP, 105, 46, 56, 11
   CONTROL "", 801, "Edit", WS_BORDER|WS_TABSTOP, 163, 46, 322, 11
   CONTROL "", 810, "Edit", WS_BORDER|WS_TABSTOP, 105, 58, 56, 11
-  CONTROL "", 811, "Edit", WS_BORDER|WS_TABSTOP, 163, 58, 322, 11
+  CONTROL "", 811, "Edit", WS_BORDER|WS_TABSTOP, 163, 58, 262, 11
+  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX, 44, 36, 447, 38
   CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 105, 86, 70, 11
   CONTROL "", 111, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 105, 86, 70, 11
   CONTROL "Codificación de proveedores", 510, "Button", WS_TABSTOP, 362, 83, 123, 14
@@ -1245,9 +1246,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dto%", -1, "Button", BS_GROUPBOX, 435, 114, 52, 110
   CONTROL "Tipo impuesto", -1, "Static", WS_GROUP, 49, 49, 49, 8
   CONTROL "Impuesto esp.", -1, "Static", WS_GROUP, 49, 61, 49, 8
-  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX, 44, 36, 447, 38
   CONTROL "", -1, "Button", BS_GROUPBOX, 43, 229, 448, 23
   CONTROL "IVA", -1, "Button", BS_GROUPBOX, 109, 114, 44, 110
+  CONTROL "", 812, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 425, 58, 60, 11
 }
 
 ART_6 DIALOG DISCARDABLE 32, 6, 496, 286
