--- a/resource/Gstimage1.rc
+++ b/resource/Gstimage1.rc
@@ -4,9 +4,11 @@
 #include <commctrl.h>
 #include <richedit.h>
 
-LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+#ifdef __FLAT__
+   1 24 "WindowsXP.Manifest"
+#endif
 
-1 MANIFEST "WindowsXP.Manifest"
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
 OFERTA BITMAP "..\\bmp\\res32.bmp"
 
