--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8564,7 +8564,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-IMPRIMIRSERIES DIALOG DISCARDABLE 166, 121, 428, 240
+IMPRIMIRSERIES DIALOG DISCARDABLE 166, 121, 428, 265
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -8580,35 +8580,40 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 215, 91, 204, 11
   CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 127, 103, 86, 11
   CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 215, 103, 204, 11
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 127, 118, 50, 11
-  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 215, 118, 204, 11
-  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 127, 130, 50, 11
-  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 215, 130, 204, 11
-  CONTROL "Número de copias predeterminado", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 159, 121, 10
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 127, 171, 38, 11
-  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 127, 185, 38, 11
-  CONTROL "", 91, "Edit", WS_BORDER|WS_TABSTOP, 209, 185, 196, 11
-  CONTROL "", 92, "TBtnBmp", 0x00000000, 407, 185, 12, 11
-  CONTROL "", 160, "Edit", WS_BORDER, 127, 199, 279, 11
-  CONTROL "", 161, "TBtnBmp", 0x00000000, 407, 199, 12, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 320, 221, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 375, 221, 50, 14
-  CONTROL "Rango", -1, "Button", BS_GROUPBOX, 44, 29, 380, 116
-  CONTROL "Impresión", -1, "Button", BS_GROUPBOX, 44, 147, 380, 68
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 128, 144, 50, 11
+  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 216, 144, 204, 11
+  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 128, 156, 50, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 216, 156, 204, 11
+  CONTROL "Número de copias predeterminado", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 184, 121, 10
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 196, 38, 11
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 128, 208, 38, 11
+  CONTROL "", 91, "Edit", WS_BORDER|WS_TABSTOP, 208, 208, 196, 11
+  CONTROL "", 92, "TBtnBmp", 0x00000000, 408, 208, 12, 11
+  CONTROL "", 160, "Edit", WS_BORDER, 128, 224, 279, 11
+  CONTROL "", 161, "TBtnBmp", 0x00000000, 408, 224, 12, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 320, 246, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 376, 246, 50, 14
+  CONTROL "Rango", -1, "Button", BS_GROUPBOX, 44, 28, 380, 144
+  CONTROL "Impresión", -1, "Button", BS_GROUPBOX, 44, 172, 380, 70
   CONTROL "Desde número", -1, "Static", WS_GROUP, 50, 42, 51, 8
   CONTROL "Hasta número", -1, "Static", WS_GROUP, 50, 54, 49, 8
-  CONTROL "Copias deseadas", -1, "Static", WS_GROUP, 50, 174, 59, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 50, 188, 31, 8
-  CONTROL "Impresora", -1, "Static", WS_GROUP, 50, 202, 36, 8
+  CONTROL "Copias deseadas", -1, "Static", WS_GROUP, 48, 200, 59, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 48, 212, 31, 8
+  CONTROL "Impresora", -1, "Static", WS_GROUP, 48, 228, 36, 8
   CONTROL "Desde fecha", -1, "Static", WS_GROUP, 50, 68, 46, 8
   CONTROL "Hasta fecha", -1, "Static", WS_GROUP, 50, 80, 44, 8
-  CONTROL "Desde cliente", 301, "Static", WS_GROUP, 50, 94, 69, 8
-  CONTROL "Hasta cliente", 321, "Static", WS_GROUP, 50, 106, 70, 8
-  CONTROL "Desde grupo cliente", 341, "Static", WS_GROUP, 50, 121, 75, 8
-  CONTROL "Hasta grupo cliente", 361, "Static", WS_GROUP, 50, 133, 75, 8
+  CONTROL "Desde cliente", 301, "Static", WS_GROUP, 50, 93, 69, 8
+  CONTROL "Hasta cliente", 321, "Static", WS_GROUP, 50, 105, 70, 8
+  CONTROL "Desde grupo cliente", 341, "Static", WS_GROUP, 50, 145, 75, 8
+  CONTROL "Hasta grupo cliente", 361, "Static", WS_GROUP, 50, 157, 75, 8
   CONTROL "Impresión de series de documentos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 116, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "", 400, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 44, 242, 380, 122
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 127, 117, 86, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 215, 117, 204, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 127, 129, 86, 11
+  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 215, 129, 204, 11
+  CONTROL "Desde Agente", 401, "Static", WS_GROUP, 50, 119, 70, 8
+  CONTROL "Hasta Agente", 421, "Static", WS_GROUP, 50, 131, 70, 8
 }
 
 IMPSERDOC DIALOG DISCARDABLE 166, 121, 294, 164
