Envases en atípicas y varios

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3284,30 +3284,30 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-CLIATP DIALOG DISCARDABLE 35, -50, 530, 292
+CLIATP DIALOG DISCARDABLE 35, -50, 530, 324
 STYLE WS_POPUP|DS_MODALFRAME|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Tarifas de clientes"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 400, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 368, 12, 60, 72
-  CONTROL "", 450, "TXBrowse", WS_TABSTOP|0x00300000, 308, 27, 215, 238
-  CONTROL "Rentabilidad >", 600, "Button", WS_TABSTOP, 1, 273, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 197, 273, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 252, 273, 50, 14
+  CONTROL "", 450, "TXBrowse", WS_TABSTOP|0x00300000, 308, 27, 215, 259
+  CONTROL "Rentabilidad >", 600, "Button", WS_TABSTOP, 1, 293, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 197, 293, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 252, 293, 50, 14
   CONTROL "Sobre", -1, "Static", WS_GROUP, 308, 16, 56, 8
-  CONTROL "Estudio rentabilidad", -1, "Button", BS_GROUPBOX, 304, 2, 222, 266
-  CONTROL "", 100, "SysTabControl32", 0x00000000, 2, 2, 300, 266
+  CONTROL "Estudio rentabilidad", -1, "Button", BS_GROUPBOX, 304, 2, 222, 288
+  CONTROL "", 100, "SysTabControl32", 0x00000000, 2, 2, 300, 288
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-CLIATP_0 DIALOG DISCARDABLE 35, -50, 296, 250
+CLIATP_0 DIALOG DISCARDABLE 35, -50, 296, 273
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Descuentos %", 715, "Button", BS_GROUPBOX, 214, 158, 76, 5
-  CONTROL "Impuestos incluidos", 702, "Button", BS_GROUPBOX, 129, 158, 84, 5
-  CONTROL "Importes netos", 701, "Button", BS_GROUPBOX, 2, 158, 126, 5
+  CONTROL "Descuentos %", 715, "Button", BS_GROUPBOX, 215, 152, 76, 91
+  CONTROL "Impuestos incluidos", 702, "Button", BS_GROUPBOX, 130, 152, 84, 91
+  CONTROL "Importes netos", 701, "Button", BS_GROUPBOX, 3, 152, 126, 91
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 52, 25, 75, 11
   CONTROL "", 105, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 25, 75, 11
   CONTROL "", 106, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 25, 160, 11
@@ -3316,58 +3316,62 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 251, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 38, 160, 11
   CONTROL "", 260, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 51, 75, 11
   CONTROL "", 261, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 51, 160, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 78, 74, 11
-  CONTROL "", 135, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 90, 74, 11
-  CONTROL "", 601, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 102, 74, 11
-  CONTROL "Comisión agente", 151, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 116, 65, 8
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 114, 74, 11
-  CONTROL "Particular", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 143, 43, 10
-  CONTROL "", 123, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 142, 75, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 142, 75, 11
-  CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 169, 75, 11
-  CONTROL "", 124, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 182, 75, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 195, 75, 11
-  CONTROL "", 126, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 208, 75, 11
-  CONTROL "", 127, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 221, 75, 11
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 234, 75, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 169, 75, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 182, 75, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 195, 75, 11
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 208, 75, 11
-  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 221, 75, 11
-  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 234, 75, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 169, 46, 11
-  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 182, 46, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 195, 46, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 208, 46, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 221, 46, 11
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 234, 46, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 76, 74, 11
+  CONTROL "", 135, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 88, 74, 11
+  CONTROL "", 601, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 100, 74, 11
+  CONTROL "Comisión agente", 151, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 114, 65, 8
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 112, 74, 11
+  CONTROL "Particular", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 137, 43, 10
+  CONTROL "", 123, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 136, 75, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 136, 75, 11
+  CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 163, 75, 11
+  CONTROL "", 124, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 176, 75, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 189, 75, 11
+  CONTROL "", 126, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 202, 75, 11
+  CONTROL "", 127, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 215, 75, 11
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 228, 75, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 163, 75, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 176, 75, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 189, 75, 11
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 202, 75, 11
+  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 215, 75, 11
+  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 135, 228, 75, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 163, 46, 11
+  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 176, 46, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 189, 46, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 202, 46, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 215, 46, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 228, 46, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 52, 253, 75, 11
+  CONTROL "", 461, "Edit", WS_BORDER|WS_TABSTOP, 128, 253, 160, 11
   CONTROL "", 90, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 52, 11, 75, 40
-  CONTROL "Coste", 700, "Button", BS_GROUPBOX, 2, 132, 290, 5
-  CONTROL "Descuentos y comisiones", -1, "Button", BS_GROUPBOX, 2, 68, 290, 5
-  CONTROL "Naturaleza", -1, "Button", BS_GROUPBOX, 2, 0, 290, 5
-  CONTROL "Precio 1", 703, "Static", WS_GROUP, 8, 173, 30, 8
-  CONTROL "Descuento artículo", -1, "Static", WS_GROUP, 8, 81, 66, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 205, 81, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 205, 117, 8, 8
-  CONTROL "Descuento promoción", -1, "Static", WS_GROUP, 8, 105, 75, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 205, 105, 8, 8
-  CONTROL "Descuento lineal", -1, "Static", WS_GROUP, 8, 93, 58, 8
+  CONTROL "Coste", 700, "Button", BS_GROUPBOX, 2, 126, 289, 26
+  CONTROL "Descuentos y comisiones", -1, "Button", BS_GROUPBOX, 2, 66, 289, 60
+  CONTROL "Naturaleza", -1, "Button", BS_GROUPBOX, 2, 0, 290, 65
+  CONTROL "Precio 1", 703, "Static", WS_GROUP, 8, 167, 30, 8
+  CONTROL "Descuento artículo", -1, "Static", WS_GROUP, 8, 79, 66, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 212, 79, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 212, 115, 8, 8
+  CONTROL "Descuento promoción", -1, "Static", WS_GROUP, 8, 103, 75, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 212, 103, 8, 8
+  CONTROL "Descuento lineal", -1, "Static", WS_GROUP, 8, 91, 58, 8
   CONTROL "Propiedad 1", 888, "Static", WS_GROUP, 8, 41, 42, 8
   CONTROL "Propiedad 2", 999, "Static", WS_GROUP, 8, 54, 42, 8
-  CONTROL "Precio 2", 704, "Static", WS_GROUP, 8, 186, 30, 8
-  CONTROL "Precio 3", 705, "Static", WS_GROUP, 8, 199, 30, 8
-  CONTROL "Precio 4", 706, "Static", WS_GROUP, 8, 212, 30, 8
-  CONTROL "Precio 5", 707, "Static", WS_GROUP, 8, 225, 30, 8
-  CONTROL "Precio 6", 708, "Static", WS_GROUP, 8, 237, 30, 8
+  CONTROL "Precio 2", 704, "Static", WS_GROUP, 8, 180, 30, 8
+  CONTROL "Precio 3", 705, "Static", WS_GROUP, 8, 193, 30, 8
+  CONTROL "Precio 4", 706, "Static", WS_GROUP, 8, 206, 30, 8
+  CONTROL "Precio 5", 707, "Static", WS_GROUP, 8, 219, 30, 8
+  CONTROL "Precio 6", 708, "Static", WS_GROUP, 8, 231, 30, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 28, 27, 8
-  CONTROL "Dto. 1", 709, "Static", WS_GROUP, 218, 172, 20, 8
-  CONTROL "Dto. 2", 710, "Static", WS_GROUP, 218, 185, 20, 8
-  CONTROL "Dto. 3", 711, "Static", WS_GROUP, 218, 198, 20, 8
-  CONTROL "Dto. 4", 712, "Static", WS_GROUP, 218, 211, 20, 8
-  CONTROL "Dto. 5", 713, "Static", WS_GROUP, 218, 224, 20, 8
-  CONTROL "Dto. 6", 714, "Static", WS_GROUP, 218, 237, 20, 8
+  CONTROL "Dto. 1", 709, "Static", WS_GROUP, 219, 166, 20, 8
+  CONTROL "Dto. 2", 710, "Static", WS_GROUP, 219, 179, 20, 8
+  CONTROL "Dto. 3", 711, "Static", WS_GROUP, 219, 192, 20, 8
+  CONTROL "Dto. 4", 712, "Static", WS_GROUP, 219, 205, 20, 8
+  CONTROL "Dto. 5", 713, "Static", WS_GROUP, 219, 218, 20, 8
+  CONTROL "Dto. 6", 714, "Static", WS_GROUP, 219, 231, 20, 8
   CONTROL "Tipo", -1, "Static", WS_GROUP, 8, 14, 27, 8
+  CONTROL "Envasado", -1, "Button", BS_GROUPBOX, 2, 243, 289, 26
+  CONTROL "Envase", -1, "Static", WS_GROUP, 8, 256, 36, 8
 }
 
 CLIATP_1 DIALOG DISCARDABLE 35, -50, 298, 186
