--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -387,22 +387,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 246, 115, 73, 11
   CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 321, 115, 124, 11
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 485, 30, 65, 11
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 113, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 551, 30, 114, 11
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 485, 42, 65, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 485, 54, 180, 11
   CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 485, 66, 18, 11
-  CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 504, 66, 18, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 523, 66, 26, 11
+  CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 505, 66, 18, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 524, 66, 26, 11
   CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 551, 66, 26, 11
   CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 578, 66, 18, 11
   CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 597, 66, 68, 11
-  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 113, 11
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 551, 42, 114, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 485, 78, 65, 11
-  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 113, 11
+  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 551, 78, 114, 11
   CONTROL "", 222, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 485, 90, 65, 11
-  CONTROL "", 223, "Edit", ES_RIGHT|WS_BORDER, 552, 90, 113, 11
+  CONTROL "", 223, "Edit", ES_RIGHT|WS_BORDER, 551, 90, 114, 11
   CONTROL "", 225, "Edit", WS_BORDER|WS_TABSTOP, 485, 102, 65, 11
-  CONTROL "", 226, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 113, 11
+  CONTROL "", 226, "Edit", WS_BORDER|WS_TABSTOP, 551, 102, 114, 11
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 485, 114, 47, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 129, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 129, 50, 14
@@ -413,6 +413,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 129, 50, 14
   CONTROL "Ocultar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 129, 50, 14
   CONTROL "Importar tarifa", 527, "Button", WS_TABSTOP, 483, 129, 50, 14
+  CONTROL "Lector ", 528, "Button", WS_TABSTOP, 616, 129, 50, 14
   CONTROL "", 240, "TXBrowse", WS_TABSTOP|0x00300000, 44, 145, 622, 139
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 288, 154, 61
   CONTROL "", 173, "Edit", ES_RIGHT|WS_BORDER, 391, 54, 54, 11
@@ -19536,18 +19537,8 @@ CAPTION "Espere por favor..."
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 0, 10, 366, 11
-  CONTROL "", 100, "TAnimat", 0x00800000, 0, 28, 365, 8
+  CONTROL "", 100, "TAnimat", 0x00800000, 0, 28, 365, 4
   CONTROL "", 120, "Static", SS_CENTER|WS_GROUP, 0, 35, 366, 11
-}
-
-WAIT_WEB DIALOG DISCARDABLE 119, 36, 265, 36
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Espere por favor..."
-FONT 12, "Segoe UI"
-{
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 25
-  CONTROL "Actualizando web espere por favor...", 510, "Static", SS_CENTER|WS_GROUP, 0, 20, 265, 8
-  CONTROL "", 520, "TAnimat", 0x00800000, 0, 30, 265, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -20962,5 +20953,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 226, 259, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 282, 259, 50, 14
   CONTROL "Inventario", -1, "Static", WS_GROUP, 5, 3, 37, 8
+}
+
+MASSIVE_APPEND_LINES DIALOG DISCARDABLE 37, 77, 376, 55
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
+CAPTION "Inserte código artículo"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 4, 3, 34, 30
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 97, 21, 275, 12
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 44, 25, 30, 8
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 267, 37, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 322, 37, 50, 14
 }
 
