--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20967,3 +20967,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 322, 37, 50, 14
 }
 
+FACTURAS_CLIENTES_RECIBOS DIALOG DISCARDABLE 64, -21, 670, 375
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Modificar [F3]", 500, "Button", WS_TABSTOP, 44, 30, 50, 14
+  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 99, 30, 50, 14
+  CONTROL "&Previsualizar", 502, "Button", WS_TABSTOP, 154, 30, 50, 14
+  CONTROL "&Imprimir", 503, "Button", WS_TABSTOP, 209, 30, 50, 14
+  CONTROL "", 200, "TXBrowse", 0x00200000, 44, 48, 620, 323
+  CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Recibos de factura", -1, "Static", WS_GROUP, 44, 3, 120, 8
+}
+
