--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16213,16 +16213,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Estilo", -1, "Button", BS_GROUPBOX, 161, 4, 152, 77
 }
 
-PROPIEDADES DIALOG DISCARDABLE 70, 20, 579, 192
+PROPIEDADES DIALOG DISCARDABLE 70, 20, 579, 209
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Propiedades"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 4, 573, 164
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 472, 173, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 527, 173, 50, 14
-  CONTROL "Total unidades", -1, "Static", WS_GROUP, 5, 179, 52, 8
-  CONTROL "", 110, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 60, 175, 71, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 472, 190, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 527, 190, 50, 14
+  CONTROL "Total unidades", -1, "Static", WS_GROUP, 451, 172, 52, 8
+  CONTROL "", 110, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 506, 170, 71, 12
+  CONTROL "&Limpiar unidades", 500, "Button", 0x00000000, 4, 190, 71, 14
 }
 
 PROVEE_9 DIALOG DISCARDABLE 49, 37, 650, 329
