--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7197,7 +7197,7 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Generador de filtros"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTabControl32", 0x00000000, 44, 29, 444, 242
+  CONTROL "OK", 100, "SysTabControl32", 0x00000000, 44, 29, 444, 242
   CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 381, 276, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 437, 276, 50, 14
@@ -7276,13 +7276,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 219, 84, 106, 134
   CONTROL "", 1110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 359, 85, 65, 12
   CONTROL "", 1120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 455, 85, 65, 12
+  CONTROL "Opciones", 1130, "Button", WS_TABSTOP, 646, 83, 50, 14
   CONTROL "", 310, "TXBrowse", 0x00200000, 219, 99, 476, 277
   CONTROL "Desde", 1111, "Static", WS_GROUP, 330, 88, 26, 8
   CONTROL "Hasta", 1121, "Static", WS_GROUP, 428, 88, 24, 8
   CONTROL "Rangos", -1, "Button", BS_GROUPBOX, 219, 72, 480, 4
   CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|WS_BORDER|WS_TABSTOP, 2, 72, 215, 327
   CONTROL "", 1160, "msctls_progress32", 0x00000000, 219, 389, 476, 10
-  CONTROL "Opciones", 1130, "Button", WS_TABSTOP, 646, 83, 50, 14
 }
 
 FASTREPORTARTICULOS_1 DIALOG DISCARDABLE 9, 8, 480, 240
@@ -20966,13 +20966,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Recibos de factura", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
-OPTIONSREPORT DIALOGEX DISCARDABLE 6, 18, 318, 132
+OPTIONSREPORT DIALOGEX DISCARDABLE 6, 18, 318, 154
 STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Opciones"
 FONT 10, "Tahoma", 0, 0, 1
 {
-  CONTROL "OK", IDOK, "Button", WS_TABSTOP, 211, 116, 50, 14
-  CONTROL "Cancel", IDCANCEL, "Button", WS_TABSTOP, 265, 116, 50, 14
-  CONTROL "", 100, "TXBrowse", 0x00200000, 6, 6, 306, 104
+  CONTROL "", 100, "TXBrowse", 0x00200000, 44, 29, 269, 104
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 209, 137, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 263, 137, 50, 14
+  CONTROL "", 400, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
 }
 
