--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17879,10 +17879,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "Stock actual", 201, "Button", BS_AUTORADIOBUTTON, 6, 139, 53, 10
   CONTROL "Fijo", 200, "Button", BS_AUTORADIOBUTTON, 6, 126, 24, 10
   CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 73, 126, 50, 12
-  CONTROL "Número de etiquetas a imprimir", -1, "Button", BS_GROUPBOX, 1, 115, 382, 38
+  CONTROL "Número de etiquetas a imprimir", -1, "Button", BS_GROUPBOX, 1, 115, 382, 50
   CONTROL "", 90, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 7, 13, 126, 51
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 28, 60, 12
   CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 41, 60, 12
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 7, 151, 35, 8
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 148, 50, 12
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 125, 148, 241, 12
 }
 
 SELECTLABELS_4 DIALOG DISCARDABLE 113, 78, 390, 194
