--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20587,15 +20587,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
 }
 
-DLG_SIGNATURE DIALOG DISCARDABLE -32768, 65, 359, 189
+DLG_SIGNATURE DIALOG DISCARDABLE -32768, 65, 359, 205
 STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Firma"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "&Aceptar", 100, "Button", WS_TABSTOP, 246, 172, 50, 14
-  CONTROL "&Cancelar", 101, "Button", WS_TABSTOP, 305, 172, 50, 14
-  CONTROL "&Limpiar", 102, "Button", WS_TABSTOP, 4, 172, 35, 14
-  CONTROL "", 200, "Static", SS_BLACKFRAME, 4, 2, 350, 166
+  CONTROL "&Aceptar", 100, "Button", WS_TABSTOP, 246, 188, 50, 14
+  CONTROL "&Cancelar", 101, "Button", WS_TABSTOP, 305, 188, 50, 14
+  CONTROL "&Limpiar", 102, "Button", WS_TABSTOP, 4, 188, 35, 14
+  CONTROL "", 200, "Static", SS_BLACKFRAME, 4, 18, 350, 166
+  CONTROL "He leido y acepto las condicones del contrato de venta.", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 5, 189, 10
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
