--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8132,17 +8132,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "SysTabControl32", WS_TABSTOP, 3, 3, 340, 318
 }
 
-IMAGENES_1 DIALOG DISCARDABLE 103, 127, 337, 300
+IMAGENES_1 DIALOG DISCARDABLE 103, 127, 337, 311
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 55, 3, 276, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 55, 15, 276, 12
-  CONTROL "Imagen por defecto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 3, 29, 78, 12
-  CONTROL "&Zoom", 3, "Button", WS_TABSTOP, 3, 42, 50, 14
-  CONTROL "", 110, "TBitmap", 0x00800000, 55, 42, 276, 255
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 3, 6, 31, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 3, 18, 31, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 55, 3, 276, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 55, 27, 276, 11
+  CONTROL "Imagen por defecto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 3, 40, 78, 12
+  CONTROL "&Zoom", 3, "Button", WS_TABSTOP, 3, 54, 50, 14
+  CONTROL "", 110, "TBitmap", 0x00800000, 55, 54, 276, 252
+  CONTROL "Imagen local", -1, "Static", WS_GROUP, 3, 6, 50, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 3, 30, 31, 8
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 55, 15, 276, 11
+  CONTROL "Imagen remota", -1, "Static", WS_GROUP, 3, 18, 51, 8
 }
 
 IMAGENES_2 DIALOG DISCARDABLE 103, 127, 337, 300
